glib-macros/tests/closure_compiletest/03-closure-self-no-rename.rs
fn main() {
    use glib::closure;
    let v = std::rc::Rc::new(1);
    closure!(#[strong] self, move |x| {});
}
